--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/server/index.js",
+    "build": "cp -r ./src/client/ ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
