--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/server/index.js",
-    "build": "cp -r ./src/client/ ./dist",
+    "build": "rm -r dist & cp -r ./src/client/ ./dist & rm -r dist/app & npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +20,9 @@
   "homepage": "https://github.com/stanislav-pan/mf.messenger.praktikum.yandex#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/nunjucks": "^3.1.3",
+    "typescript": "^4.0.3"
   }
 }
