--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,22 @@
 {
     "compileOnSave": true,
     "compilerOptions": {
+        "noImplicitAny": false,
         "allowJs": true,
-        "baseUrl": "./",
+        "baseUrl": ".",
         "outDir": "./dist/app",
-        "sourceMap": true,
+        // "sourceMap": true,
         "declaration": false,
         "downlevelIteration": true,
         "experimentalDecorators": true,
         "module": "esnext",
         "moduleResolution": "node",
         "importHelpers": true,
-        "target": "es2015",
+        "target": "ES2020",
         "typeRoots": ["node_modules/@types"],
-        "lib": ["es2018", "dom"],
+        "lib": ["es2018", "dom", "dom.iterable"],
         "paths": {
+            "tslib": ["node_modules/tslib/tslib.d.ts"]
             // "@env/*": ["src/environments/*"]
         }
     },
