--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "npm run build & node ./src/server/index.js",
     "build": "rm -r dist & cp -r ./src/client/ ./dist & node src/server/remover.js & rm -r dist/assets/styles & npx tsc & npx sass src/client/assets/styles:dist/assets/styles",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest",
+    "test:watch": "npx jest --watch"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,13 @@
     "tslib": "^2.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@types/jest": "^26.0.15",
     "@types/nunjucks": "^3.1.3",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "sass": "^1.28.0",
     "typescript": "^4.0.3"
   }
