--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build & node ./src/server/index.js",
-    "build": "rm -r dist & cp -r ./src/client/ ./dist & node src/server/remover.js & rm -r dist/assets/styles & npx tsc & npx sass src/client/assets/styles:dist/assets/styles",
+    "build": "rm -r dist & cp -r ./src/client/ ./dist & node src/server/remover.js & rm -r dist/assets/styles & npx tsc & node importer.js & npx sass src/client/assets/styles:dist/assets/styles",
     "test": "npx jest",
     "test:watch": "npx jest --watch",
     "serve": "chokidar \"src/client/**/*.ts\" \"src/client/assets/styles/**/*.scss\" -c \"npm run build\""
@@ -21,9 +21,12 @@
   },
   "homepage": "https://github.com/stanislav-pan/mf.messenger.praktikum.yandex#readme",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "chokidar": "^3.4.3",
     "chokidar-cli": "^2.1.0",
     "express": "^4.17.1",
+    "filehound": "^1.17.4",
+    "nunjucks": "^3.2.2",
     "tslib": "^2.0.3"
   },
   "devDependencies": {
