--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build & node ./src/server/index.js",
-    "build": "rm -r dist & cp -r ./src/client/ ./dist & node src/server/remover.js & rm -r dist/assets/styles & npx tsc & node importer.js & npx sass src/client/assets/styles:dist/assets/styles",
+    "build": "rm -r dist & cp -r ./src/client/ ./dist & node src/server/remover.js & rm -r dist/assets/styles & npx tsc & node importer.js & npx sass src/client/styles.scss:dist/assets/styles/styles.css",
     "test": "npx jest",
     "test:watch": "npx jest --watch",
     "serve": "chokidar \"src/client/**/*.ts\" \"src/client/assets/styles/**/*.scss\" -c \"npm run build\""
