--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bluebird": "^3.7.2",
     "chokidar": "^3.4.3",
     "chokidar-cli": "^2.1.0",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
     "filehound": "^1.17.4",
     "nunjucks": "^3.2.2",
@@ -35,6 +36,8 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
+    "@types/compression": "^1.7.0",
+    "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
     "@types/nunjucks": "^3.1.3",
     "babel-jest": "^26.6.3",
