--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build & node ./src/server/index.js",
-    "build": "rm -r -f dist & mkdir dist && mkdir \"dist/static\" & cp ./src/client/index.html ./dist & cp -r ./src/client/static/. ./dist/static & node templates-builder.js & npx tsc & node importer.js & npx sass src/client/styles.scss:dist/static/styles.css",
+    "build": "npx webpack & mkdir \"dist/static\" & cp ./src/client/index.html ./dist & cp -r ./src/client/static/. ./dist/static & node templates-builder.js",
     "build:ios": "rm -r -f dist & mkdir dist && mkdir dist/static & cp ./src/client/index.html ./dist & cp -r ./src/client/static/. ./dist/static & node templates-builder.js & npx tsc & node importer.js & npx sass src/client/styles.scss:dist/static/styles.css",
     "test": "npx jest",
     "test:watch": "npx jest --watch",
@@ -30,19 +30,35 @@
     "express": "^4.17.1",
     "filehound": "^1.17.4",
     "nunjucks": "^3.2.2",
+    "path": "^0.12.7",
     "tslib": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
+    "@babel/register": "^7.12.10",
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
     "@types/nunjucks": "^3.1.3",
+    "@types/sass-loader": "^8.0.0",
+    "@types/webpack": "^4.41.25",
     "babel-jest": "^26.6.3",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
-    "sass": "^1.28.0",
-    "typescript": "^4.0.3"
+    "mini-css-extract-plugin": "^1.3.3",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.12",
+    "typescript": "^4.0.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.3.0"
   }
 }
