Добавлен loader для загрузки njk файлов

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
               "--inspect-brk",
               "${workspaceRoot}/node_modules/jest/bin/jest.js",
               "--runInBand",
-              "--watch"
+              "--watch",
+              "--no-cache"
             ],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
