--- a/package.json
+++ b/package.json
@@ -47,18 +47,27 @@
     "babel-jest": "^26.6.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "deasync": "^0.1.21",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
+    "loader-runner": "^4.1.0",
     "mini-css-extract-plugin": "^1.3.3",
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
+    "simple-nunjucks-loader": "^3.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.12",
     "typescript": "^4.0.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.3.0"
+  },
+  "jest": {
+    "transform": {
+      "\\.[jt]sx?$": "babel-jest",
+      "^.+\\.njk$": "<rootDir>/njkMock.js"
+    }
   }
 }
