--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build & node ./src/server/index.js",
-    "build": "npx webpack & mkdir \"dist/static\" & cp ./src/client/index.html ./dist & cp -r ./src/client/static/. ./dist/static & node templates-builder.js",
-    "build:ios": "rm -r -f dist & mkdir dist && mkdir dist/static & cp ./src/client/index.html ./dist & cp -r ./src/client/static/. ./dist/static & node templates-builder.js & npx tsc & node importer.js & npx sass src/client/styles.scss:dist/static/styles.css",
+    "build": "webpack",
     "test": "npx jest",
     "test:watch": "npx jest --watch",
-    "serve": "chokidar \"src/client/**/*.ts\" \"src/client/assets/styles/**/*.scss\" -c \"npm run build\"",
+    "serve": "webpack serve",
     "prettier": "npx prettier --write --ignore-unknown \"./src/**/*.*\""
   },
   "repository": {
@@ -23,15 +22,8 @@
   },
   "homepage": "https://github.com/stanislav-pan/mf.messenger.praktikum.yandex#readme",
   "dependencies": {
-    "bluebird": "^3.7.2",
-    "chokidar": "^3.4.3",
-    "chokidar-cli": "^2.1.0",
-    "compression": "^1.7.4",
     "express": "^4.17.1",
-    "filehound": "^1.17.4",
-    "nunjucks": "^3.2.2",
-    "path": "^0.12.7",
-    "tslib": "^2.0.3"
+    "nunjucks": "^3.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -39,21 +31,25 @@
     "@babel/preset-typescript": "^7.12.1",
     "@babel/register": "^7.12.10",
     "@types/compression": "^1.7.0",
+    "@types/copy-webpack-plugin": "^6.4.0",
     "@types/express": "^4.17.9",
+    "@types/file-loader": "^4.2.0",
     "@types/jest": "^26.0.15",
     "@types/nunjucks": "^3.1.3",
     "@types/sass-loader": "^8.0.0",
     "@types/webpack": "^4.41.25",
+    "@types/webpack-dev-server": "^3.11.1",
     "babel-jest": "^26.6.3",
+    "chokidar": "^3.4.3",
+    "chokidar-cli": "^2.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "compression": "^1.7.4",
+    "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
-    "deasync": "^0.1.21",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
-    "loader-runner": "^4.1.0",
     "mini-css-extract-plugin": "^1.3.3",
-    "resolve-url-loader": "^3.1.2",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "simple-nunjucks-loader": "^3.1.0",
@@ -62,12 +58,16 @@
     "typescript": "^4.0.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.11.0",
-    "webpack-cli": "^4.3.0"
+    "webpack-cli": "^4.3.0",
+    "webpack-dev-server": "^3.11.1",
+    "path": "^0.12.7",
+    "tslib": "^2.0.3"
   },
   "jest": {
     "transform": {
       "\\.[jt]sx?$": "babel-jest",
-      "^.+\\.njk$": "<rootDir>/njkMock.js"
+      "^.+\\.njk$": "<rootDir>/jest/njk-mock.js",
+      "^.+\\.scss$": "<rootDir>/jest/scss-mock.js"
     }
   }
 }
