--- a/package.json
+++ b/package.json
@@ -48,26 +48,32 @@
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "husky": "^4.3.6",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.3",
+    "path": "^0.12.7",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "simple-nunjucks-loader": "^3.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.12",
+    "tslib": "^2.0.3",
     "typescript": "^4.0.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.3.0",
-    "webpack-dev-server": "^3.11.1",
-    "path": "^0.12.7",
-    "tslib": "^2.0.3"
+    "webpack-dev-server": "^3.11.1"
   },
   "jest": {
     "transform": {
       "\\.[jt]sx?$": "babel-jest",
       "^.+\\.njk$": "<rootDir>/jest/njk-mock.js",
       "^.+\\.scss$": "<rootDir>/jest/scss-mock.js"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test & npm run prettier"
     }
   }
 }
