--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "npx jest",
     "test:watch": "npx jest --watch",
     "serve": "webpack serve",
-    "prettier": "npx prettier --write --ignore-unknown \"./src/**/*.*\""
+    "prettier": "npx prettier --write --ignore-unknown \"./src/**/*.*\"",
+    "eslint": "eslint --debug src/client/",
+    "eslint:fix": "eslint --debug src/client/ --fix"
   },
   "repository": {
     "type": "git",
@@ -39,6 +41,8 @@
     "@types/sass-loader": "^8.0.0",
     "@types/webpack": "^4.41.25",
     "@types/webpack-dev-server": "^3.11.1",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
     "babel-jest": "^26.6.3",
     "chokidar": "^3.4.3",
     "chokidar-cli": "^2.1.0",
@@ -46,12 +50,14 @@
     "compression": "^1.7.4",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
+    "eslint": "^7.17.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.3",
     "path": "^0.12.7",
+    "prettier-eslint": "^12.0.0",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "simple-nunjucks-loader": "^3.1.0",
@@ -69,11 +75,6 @@
       "\\.[jt]sx?$": "babel-jest",
       "^.+\\.njk$": "<rootDir>/jest/njk-mock.js",
       "^.+\\.scss$": "<rootDir>/jest/scss-mock.js"
-    }
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm test & npm run prettier"
     }
   }
 }
