--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
   "homepage": "https://github.com/stanislav-pan/mf.messenger.praktikum.yandex#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "netlify-cli": "^2.70.0",
     "nunjucks": "^3.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@babel/register": "^7.12.10",
     "@types/compression": "^1.7.0",
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/express": "^4.17.9",
     "@types/file-loader": "^4.2.0",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^26.0.20",
     "@types/nunjucks": "^3.1.3",
     "@types/sass-loader": "^8.0.0",
     "@types/webpack": "^4.41.25",
@@ -44,30 +45,26 @@
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "babel-jest": "^26.6.3",
-    "chokidar": "^3.4.3",
-    "chokidar-cli": "^2.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression": "^1.7.4",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.17.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.0",
-    "husky": "^4.3.6",
+    "html-webpack-plugin": "^4.5.1",
+    "husky": "^4.3.7",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.3",
     "path": "^0.12.7",
     "prettier-eslint": "^12.0.0",
-    "sass": "^1.30.0",
+    "sass": "^1.32.2",
     "sass-loader": "^10.1.0",
     "simple-nunjucks-loader": "^3.1.0",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.12",
-    "tslib": "^2.0.3",
-    "typescript": "^4.0.3",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.3.0",
+    "ts-loader": "^8.0.14",
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.3",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1"
   },
   "jest": {
