--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build & node ./src/server/index.js",
-    "build": "webpack",
+    "build": "webpack --config webpack.prod.ts",
     "test": "npx jest",
     "test:watch": "npx jest --watch",
-    "serve": "webpack serve",
+    "serve": "webpack serve --config webpack.dev.ts",
     "prettier": "npx prettier --write --ignore-unknown \"./src/**/*.*\"",
     "eslint": "eslint --debug src/client/",
     "eslint:fix": "eslint --debug src/client/ --fix"
@@ -65,7 +65,8 @@
     "typescript": "^4.1.3",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1"
+    "webpack-dev-server": "^3.11.1",
+    "webpack-merge": "^5.7.3"
   },
   "jest": {
     "transform": {
