--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "webpack serve --config webpack.dev.ts",
     "prettier": "npx prettier --write --ignore-unknown \"./src/**/*.*\"",
     "eslint": "eslint --cache --debug src/client/",
-    "eslint:fix": "eslint --cache --fix --debug src/client/"
+    "eslint:fix": "eslint --cache --fix --debug --max-warnings=0 src/client/"
   },
   "repository": {
     "type": "git",
@@ -49,6 +49,7 @@
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
     "husky": "^4.3.7",
@@ -56,7 +57,6 @@
     "lint-staged": "^10.5.3",
     "mini-css-extract-plugin": "^1.3.3",
     "path": "^0.12.7",
-    "prettier-eslint": "^12.0.0",
     "sass": "^1.32.2",
     "sass-loader": "^10.1.0",
     "simple-nunjucks-loader": "^3.1.0",
@@ -81,6 +81,9 @@
     }
   },
   "lint-staged": {
-    "*.ts": "npm run eslint:fix"
+    "*.ts": [
+        "npx prettier --write --ignore-unknown",
+        "npm run eslint:fix"
+    ]
   }
 }
