--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
   },
   "lint-staged": {
     "*.ts": [
-        "npx prettier --write --ignore-unknown",
-        "npm run eslint:fix"
+      "npm run eslint:fix",
+      "npx prettier --write --ignore-unknown"
     ]
   }
 }
